-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.17.0
-
2
-
9223372036854775807
There is a missing object reference deletion in lod_update_log_gc(), which can cause e2fsck to consider the update llog unattached and move it to lost+found:
# e2fsck -E no_optimize_extents -f -v -t -t -n <device node>
...
Pass 4: Checking reference counts
Unattached inode 141
Connect to /lost+found? no
Unattached inode 70665135
Connect to /lost+found? no
...