LU-20026 lod: delete reference on update logs when destroyed

Add a missing reference deletion to update logs, so that the inode
link count drops to 0 when they are destroyed. This issue was found by
running e2fsck on the MDTs, which caused the inodes to be considered
unattached, as the names in update_log_dir had already been removed:

 # e2fsck -E no_optimize_extents -f -v -t -t -n <device node>
...
Pass 4: Checking reference counts
Unattached inode 141
Connect to /lost+found? no

Unattached inode 70665135
Connect to /lost+found? no
...

HPE-bug-id: LUS-12225
Fixes: b054fcd785 ("LU-16159 lod: cancel update llogs upon recovery abort")
Signed-off-by: Nikitas Angelinas <nikitas.angelinas@hpe.com>
Change-Id: I301dde20b976663c98b91d33aac45d90daaaf6b7
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64755
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>
Reviewed-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>